kubernetes/apps/services/it-tools/app/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: it-tools
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: it-tools
      app.kubernetes.io/instance: it-tools
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: network
            gateway.networking.k8s.io/gateway-name: kgateway-internal
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
